CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

PROJECT(SSCore)

ADD_DEFINITIONS(-DSS_CORE)

INCLUDE_DIRECTORIES($ENV{SS_INCLUDE_PATH})

SET(LOCAL_SOURCES_FILES
	src/core.c
	src/core.h
	src/log.cpp
	src/macros.cpp)

ADD_LIBRARY(SSCore
	SHARED
	${LOCAL_SOURCES_FILES}
)


IF(SS_HAVE_OUTPUT_DIRECTORY)
	SET_TARGET_PROPERTIES(
		SSCore
		PROPERTIES
		RUNTIME_OUTPUT_DIRECTORY $ENV{SS_BINARY_PATH}
		LIBRARY_OUTPUT_DIRECTORY $ENV{SS_BINARY_PATH}
		ARCHIVE_OUTPUT_DIRECTORY $ENV{SS_ARCHIVE_PATH}
		PDB_OUTPUT_DIRECTORY $ENV{SS_PDB_PATH}
		)
ENDIF(SS_HAVE_OUTPUT_DIRECTORY)

SET_PROPERTY(TARGET SSCore PROPERTY FOLDER "Core")
