CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

PROJECT(SSCore)

ADD_DEFINITIONS(-DBUILDING_SS_CORE)

SET(LOCAL_SOURCES_FILES
	src/script.cpp
	src/core.c
	src/core.h
	src/log.cpp
	src/macros.cpp
	src/modules.h

	src/uri/uri.cpp
	src/uri/schemas.cpp
	src/uri/file_schema.cpp
	
	src/modules/mod_log.c)

LINK_LIBRARIES(${SS_LUA_LIBNAME})
LINK_DIRECTORIES(${LUA_LIB})

ADD_LIBRARY(SSCore
	SHARED
	${LOCAL_SOURCES_FILES}
)

IF(SS_HAVE_OUTPUT_DIRECTORY)
	SET_TARGET_PROPERTIES(
		SSCore
		PROPERTIES
		RUNTIME_OUTPUT_DIRECTORY $ENV{SS_BINARY_PATH}
		LIBRARY_OUTPUT_DIRECTORY $ENV{SS_BINARY_PATH}
		ARCHIVE_OUTPUT_DIRECTORY $ENV{SS_ARCHIVE_PATH}
		PDB_OUTPUT_DIRECTORY $ENV{SS_PDB_PATH}
		)
ENDIF(SS_HAVE_OUTPUT_DIRECTORY)

SET_PROPERTY(TARGET SSCore PROPERTY FOLDER "Core")
